fixed sorts overflow

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -574,9 +574,12 @@ body{
       margin: 0 auto;
     }
   }
+  .sorts-screen{
+
+  }
   .sorts-screen:after{
-    width: 700px;
-    margin-left: -350px;
+    width: 100%;
+    margin-left: -50%;
     background-size: contain;
   }
   .facts-screen {
